@startuml Ebene3.png
hide empty members

package repository {
    interface ParameterRepository
    interface SelectionVectorProfileRepository
}

package screeningsheet {
    interface ScreeningSheetServiceRepository {
        getParameter(names : Collection<String>) : Collection<Parameter>
    }

    abstract class JPAScreeningSheetServiceRepositoryMapper {
        {abstract} toDomain(entity : ParameterEntity) : Parameter
        toDomain(entity : ParameterEntity, domain : ParameterBuilder) : void
    }

    class JPAScreeningSheetServiceRepository {
    }
    ScreeningSheetServiceRepository <|.. JPAScreeningSheetServiceRepository
    JPAScreeningSheetServiceRepository --> "1" JPAScreeningSheetServiceRepositoryMapper : mapper
    JPAScreeningSheetServiceRepository --> "1" ParameterRepository : parameterRepository

    interface SelectionVectorProviderRepository {
        getSelectionVectorProfile(internalKey : String) : Optional<SelectionVectorProfile>
    }

    abstract class JPASelectionVectorProviderRepositoryMapper {
        {abstract} toDomain(SelectionVectorProfileEntity entity) : SelectionVectorProfile
    }

    class JPASelectionVectorProviderRepository {
    }
    SelectionVectorProviderRepository <|.. JPASelectionVectorProviderRepository
    JPASelectionVectorProviderRepository --> "1" JPASelectionVectorProviderRepositoryMapper : mapper
    JPASelectionVectorProviderRepository --> "1" SelectionVectorProfileRepository : selectionVectorProfileRepository


}
@enduml